--- a/app/src/main/res/layout/fragment_create_stand_up_main.xml
+++ b/app/src/main/res/layout/fragment_create_stand_up_main.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/settings_text_color"
+            android:background="?attr/white_text_color"
             app:navigationIconTint="?attr/toolbarColor"
             app:subtitleTextColor="?attr/toolbarColor"
             app:title="@string/stand_up"
