--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,25 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.settings.SettingsFragment">
 
-<!--    <com.google.android.material.appbar.AppBarLayout-->
-<!--        android:id="@+id/toolbar_wrapper"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/logo_wrapper"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
-
-<!--        <com.google.android.material.appbar.MaterialToolbar-->
-<!--            android:id="@+id/toolbar_setting"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="?attr/settings_text_color"-->
-<!--            app:navigationIconTint="?attr/toolbarColor"-->
-<!--            app:subtitleTextColor="?attr/toolbarColor"-->
-<!--            app:title="@string/settings"-->
-<!--            app:titleTextColor="?attr/toolbarColor" />-->
-
-<!--    </com.google.android.material.appbar.AppBarLayout>-->
-
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/logo_wrapper"
         android:layout_width="match_parent"
@@ -65,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
                 android:text="@string/change_theme"
-                android:textColor="?attr/settings_text_color"
+                android:textColor="?attr/white_text_color"
                 android:textSize="15sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -97,7 +78,7 @@
                 android:layout_marginStart="40dp"
                 android:drawablePadding="15dp"
                 android:text="@string/change_language"
-                android:textColor="?attr/settings_text_color"
+                android:textColor="?attr/white_text_color"
                 android:textSize="15sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -107,6 +88,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/share_card"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
@@ -130,7 +112,7 @@
                 android:layout_marginStart="40dp"
                 android:drawablePadding="15dp"
                 android:text="@string/share"
-                android:textColor="?attr/settings_text_color"
+                android:textColor="?attr/white_text_color"
                 android:textSize="15sp"
                 android:textStyle="bold" />
         </LinearLayout>
