--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -182,7 +182,7 @@
             android:background="@drawable/rectangle_bg"
             android:text="@string/apply"
             android:textColor="#FFF"
-            android:textSize="30sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -199,7 +199,7 @@
             android:maxLength="3"
             android:textAlignment="center"
             android:textColor="?attr/textColor"
-            android:textColorHint="?attr/textColor"
+            android:textColorHint="?attr/hint_color"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
