--- a/app/src/main/res/layout/item_main_task.xml
+++ b/app/src/main/res/layout/item_main_task.xml
@@ -50,7 +50,7 @@
             android:gravity="center"
             android:padding="5dp"
             android:textAlignment="center"
-            android:textColor="?attr/settings_text_color"
+            android:textColor="?attr/white_text_color"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
