--- a/app/src/main/res/layout/layout_target.xml
+++ b/app/src/main/res/layout/layout_target.xml
@@ -13,7 +13,7 @@
         android:padding="18dp"
         android:text="@string/next"
         android:fontFamily="@font/scope_one"
-        android:textColor="?attr/settings_text_color"
+        android:textColor="?attr/white_text_color"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -26,9 +26,9 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:padding="24dp"
-        style="@style/CommonStyle"
+        style="@style/CommonFontStyle"
         android:text="@string/habit"
-        android:textColor="?attr/settings_text_color"
+        android:textColor="?attr/white_text_color"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
