--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -31,7 +31,7 @@
         android:padding="8dp"
         android:singleLine="true"
         android:text="@string/you_name"
-        android:textColor="?attr/settings_text_color"
+        android:textColor="?attr/white_text_color"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nav_header_iv"
@@ -48,7 +48,7 @@
         android:padding="8dp"
         android:singleLine="true"
         android:text="@string/level"
-        android:textColor="?attr/settings_text_color"
+        android:textColor="?attr/white_text_color"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nav_header_tv"
