--- a/app/src/main/res/layout/password_layout.xml
+++ b/app/src/main/res/layout/password_layout.xml
@@ -37,7 +37,7 @@
                     android:layout_margin="20dp"
                     android:text="Проверка"
                     android:textAlignment="center"
-                    android:textColor="?attr/settings_text_color"
+                    android:textColor="?attr/white_text_color"
                     android:textSize="20sp" />
 
             </androidx.cardview.widget.CardView>
