--- a/app/src/main/res/layout/choose_time_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/choose_time_bottom_sheet_dialog.xml
@@ -36,7 +36,7 @@
             android:id="@+id/hour_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Часы"
+            android:text="@string/hour"
             android:layout_margin="10dp"
             android:textColor="?attr/textColor"
             android:textSize="18sp"
@@ -47,7 +47,7 @@
             android:id="@+id/minute_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Минуты"
+            android:text="@string/minute"
             android:textColor="?attr/textColor"
             android:layout_margin="10dp"
             android:textSize="18sp"
