--- a/app/src/main/res/layout/item_langauge.xml
+++ b/app/src/main/res/layout/item_langauge.xml
@@ -2,13 +2,15 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/theme_background"
+    android:layout_width="match_parent"
+    android:layout_gravity="center_horizontal"
     style="@style/cardStyle"
-    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/language_tv"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
+        android:layout_gravity="center_horizontal"
         android:layout_height="match_parent"
         android:background="@drawable/rectangle_background"
         android:padding="12dp"
