--- a/app/src/main/res/layout/language_dialog.xml
+++ b/app/src/main/res/layout/language_dialog.xml
@@ -16,8 +16,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="2"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/item_langauge" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
