--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -288,4 +288,11 @@
         <item name="android:textCursorDrawable">@drawable/cursor_color</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="instructionTextStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?attr/textColor</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:visibility">gone</item>
+    </style>
 </resources>
