--- a/app/src/main/res/layout/fragment_create_tasks.xml
+++ b/app/src/main/res/layout/fragment_create_tasks.xml
@@ -65,6 +65,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/rounded_rec8"
         android:layout_marginBottom="30dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
