--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -29,5 +29,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add_task"
         tools:targetApi="lollipop" />
+<TextView
+    android:id="@+id/text_nooruz"
+    android:layout_width="260dp"
+    android:layout_height="60dp"
+    android:textSize="20sp"
+    android:text="Вы еще не создали свою категорию"
+    android:textColor="@color/blue"
+    android:gravity="center"
+    android:fontFamily="@font/inter_thin"
+    android:layout_marginTop="88dp"
+    android:visibility="gone"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"/>
+    <ImageView
+        android:id="@+id/image_nooruz"
+        android:layout_width="254dp"
+        android:layout_height="254dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/image_categories"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/text_nooruz"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
