--- a/app/src/main/res/layout/fragment_dream.xml
+++ b/app/src/main/res/layout/fragment_dream.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragment.dream.DreamFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -41,4 +41,28 @@
         custom:colorRight="@color/dark_green_for_achievement"
         custom:drawableLeft="@drawable/trophy" />
 
+    <TextView
+        android:id="@+id/text_nooruz"
+        android:layout_width="272dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="55dp"
+        android:fontFamily="@font/inter_thin"
+        android:text="Вы еще не записали свой порядок дня"
+        android:textColor="@color/blue"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/image_nooruz"
+        android:layout_width="321dp"
+        android:layout_height="323dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/image_sleep"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_nooruz" />
 </androidx.constraintlayout.widget.ConstraintLayout>
