--- a/app/src/main/res/layout/fragment_focus.xml
+++ b/app/src/main/res/layout/fragment_focus.xml
@@ -104,4 +104,29 @@
         custom:colorRight="@color/dark_green_for_achievement"
         custom:drawableLeft="@drawable/trophy" />
 
+    <TextView
+        android:id="@+id/text_nooruz"
+        android:layout_width="270dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="88dp"
+        android:text="Вы еще не создали новый раздел"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/image_nooruz"
+        android:layout_width="230dp"
+        android:layout_height="237dp"
+        app:layout_constraintTop_toBottomOf="@id/text_nooruz"
+        android:layout_marginTop="60dp"
+        android:visibility="gone"
+        android:src="@drawable/image_chapter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
