--- a/app/src/main/res/layout/fragment_habit.xml
+++ b/app/src/main/res/layout/fragment_habit.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:custom="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/habit_recycler"
@@ -36,12 +36,38 @@
 
     <com.cdev.achievementview.AchievementView
         android:id="@+id/achievement_view"
-        custom:collapseStartDelay="3500"
-        custom:colorLeft="@color/green_for_achievement"
-        custom:colorRight="@color/dark_green_for_achievement"
-        custom:drawableLeft="@drawable/trophy"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="40dp"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        custom:collapseStartDelay="3500"
+        custom:colorLeft="@color/green_for_achievement"
+        custom:colorRight="@color/dark_green_for_achievement"
+        custom:drawableLeft="@drawable/trophy" />
+
+    <TextView
+        android:id="@+id/text_nooruz"
+        android:layout_width="260dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="78dp"
+        android:fontFamily="@font/inter_thin"
+        android:gravity="center"
+        android:text="Вы еще не создали свою привычку"
+        android:textColor="@color/blue"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:layout_width="254dp"
+        android:layout_height="254dp"
+        android:id="@+id/image_nooruz"
+        app:layout_constraintTop_toBottomOf="@id/text_nooruz"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/image_habit"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
