--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="light_blue_900">#FF01579B</color>
     <color name="white">#FFFFFF</color>
     <color name="black_transparent">#E6000000</color>
+    <color name="blue">#1460D3</color>
 
 </resources>
