--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,21 @@
         <item name="appWidgetBackgroundColor">@color/light_blue_200</item>
         <item name="appWidgetTextColor">?attr/white_text_color</item>
     </style>
+
+
+
+    <style name="Spinner" parent="android:Widget.Material.Light.TimePicker">
+        <item name="android:timePickerMode">spinner</item>
+    </style>
+    <style name="TimePickerSpinner" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
+        <item name="android:timePickerStyle">@style/Spinner</item>
+        <item name="android:windowBackground">@color/white</item>
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/blue</item>
+        <item name="colorAccent">@color/blue</item>
+        <item name="colorControlNormal">@color/blue</item>
+    </style>
+
+
+
 </resources>
